syntax = "proto3";

option csharp_namespace = "MCIO.Demos.Store.Gateways.General";

package MCIO.Demos.Store.Gateways.General;

service PingService {
  rpc Ping(PingRequest) returns (PingReply);
}

message PingRequest {

}

message PingReply {

}
